--- a/styles/index.css
+++ b/styles/index.css
@@ -38,11 +38,46 @@ hr {
   background-color: rgb(0, 0, 79);
 }
 .cards {
+  margin: 40px 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 .cards .card img {
   border: solid white 3px;
   border-radius: 15%;
-  size: 5%;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+}
+.cards .card p {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  margin: 5px;
+}
+.intro {
+  text-align: center;
+}
+.intro p {
+  color: white;
+  font-size: 20px;
+}
+.quote {
+  text-align: center;
+}
+.quote p {
+  margin: 50px 0 0 0;
+  color: white;
+  font-size: 20px;
+}
+.footer {
+  margin: 30px 0 0 0;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.footer img {
+  height: 100px;
+  width: 100px;
 }
