--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,7 @@ body {
   border: solid 2px white;
   background-color: rgb(201, 128, 201);
   padding: 10px;
+  border-radius: 15%;
 }
 hr {
   height: 5px;
@@ -36,6 +37,8 @@ hr {
 }
 .body {
   background-color: rgb(0, 0, 79);
+  width: 100%;
+  height: 100%;
 }
 .cards {
   margin: 40px 0;
@@ -80,4 +83,48 @@ hr {
 .footer img {
   height: 100px;
   width: 100px;
+}
+
+.table-container {
+  Margin: 0 auto;
+  width: 30%;          /* Controls the width of the table container */
+  max-width: 900px;    /* Optional: limits the maximum width of the container */
+  /* padding: 20px,0; */
+  border: 1px solid #ccc;
+  background-color: rgb(0, 0, 79);
+  border-radius: 8px;
+}
+.heading_table{
+  padding-top: 0%;
+  Margin: 0 auto;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  background-color: rgb(70, 2, 70);
+  border-radius: 8px;}
+
+.text{
+ /* border: 1px solid white; */
+  text-align: center;
+  color: white;
+}
+.body2{
+  background-color: rgb(0, 0, 79);
+  padding: 90px 0;
+  margin: 0;
+}
+
+h3{
+    background-color: rgb(100, 0, 79);
+    color: white;
+    Margin: 0 auto ;
+    text-align: center;
+    border: 5px;
+    border-radius: 10%;
+    width: 20%;
+}
+.bullet_points{
+  display: inline-block;
+  text-align: left;
+  color: white;
 }
