--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,22 @@
 body {
   margin: 0;
 }
+.home:hover {
+  background-color: rgb(0, 0, 79);
+}
+
+.contact:hover {
+  background-color: rgb(0, 0, 79);
+}
+
+.about:hover {
+  background-color: rgb(0, 0, 79);
+}
+
+#current {
+  background-color: rgb(0, 0, 79);
+}
+
 .header {
   background-color: rgb(0, 0, 79);
   padding: 0;
@@ -113,6 +129,14 @@ hr {
   padding: 90px 0;
   margin: 0;
 }
+.body3{
+  background-color: rgb(0, 0, 79);
+  padding: 90px 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
 
 h3{
     background-color: rgb(100, 0, 79);
@@ -127,4 +151,20 @@ h3{
   display: inline-block;
   text-align: left;
   color: white;
+}
+
+.google-font {
+  font-family: "Roboto Condensed", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.iframe-container {
+  display: flex;
+  justify-content: center; /* Centers the iframe horizontally */
+  align-items: center;     /* Centers the iframe vertically */
+  width: 100%;             /* Takes full width of the page */
+  height: 100vh;           /* Takes full height of the viewport */
+  padding: 20px;           /* Optional: Adds some padding around the iframe */
 }
